Fork from kasora bot

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kasora-tgbot",
+  "name": "zephray-tgbot",
   "version": "1.0.0",
   "description": "My stupid bot",
   "main": "app.js",
